--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -202,3 +202,14 @@ sidebar: auto
 - [Pad](https://yopad.eu/p/2023-05-14-dune-365days)
 
 ### Sesión 125 Cpp-review-dune 21/05/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-05-21.pdf)
+- [Pad](https://yopad.eu/p/21-05-2023-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/NsBb6bEUmaM"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 126 Cpp-review-dune 28/05/2023
