--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -213,3 +213,14 @@ sidebar: auto
 </iframe>
 
 ### Sesión 126 Cpp-review-dune 28/05/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-05-28.pdf)
+- [Pad](https://yopad.eu/p/2023-05-28-dune-365days)
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/zVTragsKp9Y"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+### Sesión 127 Cpp-review-dune 04/06/2023
