--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -223,4 +223,9 @@ sidebar: auto
   frameborder="0" allowfullscreen>
 </iframe>
 
-### Sesión 127 Cpp-review-dune 04/06/2023
+### Sesión 127 Cpp-review-dune 18/06/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-05-28.pdf)
+- [Pad](https://yopad.eu/p/2023-06-18-dune-365days)
+
+### Sesión 128 Cpp-review-dune 25/06/2023
