--- a/docs/src/videos/zoom/youtube/2023.md
+++ b/docs/src/videos/zoom/youtube/2023.md
@@ -344,8 +344,74 @@ sidebar: auto
 
 ### Sesión 140 Cpp-review-dune 24/09/2023
 
-<!-- <iframe width="610" height="350"
+<iframe width="610" height="350"
   sandbox="allow-same-origin allow-scripts allow-popups"
-  src="https://www.youtube-nocookie.com/embed/mSFBRs5IdgQ"
+  src="https://www.youtube-nocookie.com/embed/qEhY6p9IQO0"
   frameborder="0" allowfullscreen>
-</iframe> -->
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-09-08.pdf)
+- [Pad](https://yopad.eu/p/2023-10-08-365days)
+
+### Sesión 141 Cpp-review-dune 15/10/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/oW8FL44AsaE"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-10-15.pdf)
+- [Pad](https://yopad.eu/p/2023-10-15-365days)
+
+### Sesión 142 Cpp-review-dune 22/10/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/ww4dS6E8YqE"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-10-22.pdf)
+- [Pad](https://yopad.eu/p/2023-10-22-365days)
+
+### Sesión 143 Cpp-review-dune 29/10/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/v6NSxg5maDM"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-10-29.pdf)
+- [Pad](https://yopad.eu/p/29102023-365days)
+
+### Sesión 145 Cpp-review-dune 12/11/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/4EOabxhNdZw"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-12.pdf)
+- [Pad](https://yopad.eu/p/2023-11-12-365days)
+
+### Sesión 146 Cpp-review-dune 26/11/2023
+
+<iframe width="610" height="350"
+  sandbox="allow-same-origin allow-scripts allow-popups"
+  src="https://www.youtube-nocookie.com/embed/MLJmaBJDQDY"
+  frameborder="0" allowfullscreen>
+</iframe>
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-26.pdf)
+- [Pad](https://yopad.eu/p/26-11-2023-365days)
+
+### Sesión 147 Cpp-review-dune 10/12/2023
+
+- [Diapositiva](https://cpp-review-dune.github.io/meetings-2022/2023-11-26.pdf)
+- [Pad](https://yopad.eu/p/2023-10-12-365days)
+
+
+<!-- ### Sesión 148 Cpp-review-dune 17/12/2023 -->
